add GoogleBookAPI, add Image, description, rating for Book